--- a/milestone3/templates/home.html
+++ b/milestone3/templates/home.html
@@ -1,145 +1,134 @@
 {% extends "base.html" %}
 {% block content %}
-<!-- 
-<div id="index-banner" class="parallax-container">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <br><br>
-        <h1 class="header center teal-text text-lighten-2">Parallax Template</h1>
-        <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
-        </div>
-        <div class="row center">
-          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
-        </div>
-        <br><br>
 
-      </div> -->
-    <div id="bannersm" class="row">
-      <div><img class="bannersm center-align" src="../static/images/frontPageBanner.webp" alt="Sports Therapy Picture"></div>
-    </div>
+<div id="bannersm" class="row">
+  <div><img class="bannersm center-align" src="../static/images/frontPageBanner.webp" alt="Sports Therapy Picture">
+  </div>
+</div>
 
 
 <div id="stepTitle" class="row">
-    <div class="col s12 stepTitle center-align">How it works</div>
-    <div class="grid-example col s12 m6 l4 center-align">
-      <a href="{{ url_for('register') }}">
-        <img class="steps" src="../static/images/1.webp" alt="Step 1 Book Appointment">
-      </a>
-    </div>
-    <div class="grid-example col s12 m6 l4 center-align">
-      <img class="steps" src="../static/images/2.webp" alt="Step 2 Attend Appointment">
-    </div>
-    <div class="grid-example col s12 m6 l4 center-align">
-      <img class="steps" src="../static/images/3.webp" alt="Step 3 Personalised Rehab plan">
-    </div>
+  <div class="col s12 stepTitle center-align">How it works</div>
+  <div class="grid-example col s12 m6 l4 center-align">
+    <a href="{{ url_for('register') }}">
+      <img class="steps" src="../static/images/1.webp" alt="Step 1 Book Appointment">
+    </a>
   </div>
+  <div class="grid-example col s12 m6 l4 center-align">
+    <img class="steps" src="../static/images/2.webp" alt="Step 2 Attend Appointment">
+  </div>
+  <div class="grid-example col s12 m6 l4 center-align">
+    <img class="steps" src="../static/images/3.webp" alt="Step 3 Personalised Rehab plan">
+  </div>
+</div>
 
-  <a href="{{ url_for('register') }}" class="waves-effect waves-light btn-large blue darken-4 center cta">Book your appointment here</a>
+<a href="{{ url_for('register') }}" class="waves-effect waves-light btn-large blue darken-4 center cta">Book your
+  appointment here</a>
 
-  <div class="stepTitle center-align">Meet the Team</div>
-  <div class="row">
-    <div class="col s12 m6 l4 center">
-      <!--The image used has been supplied by Balanced Training-->
-      <img class="profilepic" src="../static/images/sarah-sm-elb.webp" alt="Sarah Profile pic">
-      <h4 class="therapists"> <strong>Sarah Goodrem</strong><br> Head Sports Therapist & PT</h4>
-      <p>Being a Sports Therapist and Personal trainer gives Sarah an insight into how to both,
-         work on an injury and help the healing process and work round the problem to help you achieve 
-         the results you are looking for whether they be conditioning or weightloss.
-        </p>
-    </div>
-    <div class="col s12 m6 l4 center">
-      <!--The image used has been supplied by Balanced Training-->
-      <img class="profilepic" src="../static/images/ross-spoons.webp" alt="Greg Profile pic">
-      <h4 class="therapists"> <strong>Greg Goodrem</strong><br> Trainee Massage Therapist & PT</h4>
-      <p class="center">Having delivered THOUSANDS of hours of personal training since starting in 2005, Greg can 
-        help you slowly return to sport and exercise after your treatment.</p>
-    </div>
-    <div class="col s12 m6 l4 center">
-      <!--The image used has been supplied by Balanced Training-->
-      <img class="profilepic" src="../static/images/max-outside.webp" alt="Max profile pic">
-      <h4 class="therapists"> <strong> Maximus Goodrem</strong> <br>Emotional Support</h4>
-      <p>This little guy is an integral part of our team always brings a smile to 
-        your face whenever he comes through the gym door carrying a ball. He usually likes to chill
+<div class="stepTitle center-align">Meet the Team</div>
+<div class="row">
+  <div class="col s12 m6 l4 center">
+    <!--The image used has been supplied by Balanced Training-->
+    <img class="profilepic" src="../static/images/sarah-sm-elb.webp" alt="Sarah Profile pic">
+    <h4 class="therapists"> <strong>Sarah Goodrem</strong><br> Head Sports Therapist & PT</h4>
+    <p>Being a Sports Therapist and Personal trainer gives Sarah an insight into how to both,
+      work on an injury and help the healing process and work round the problem to help you achieve
+      the results you are looking for whether they be conditioning or weightloss.
+    </p>
+  </div>
+  <div class="col s12 m6 l4 center">
+    <!--The image used has been supplied by Balanced Training-->
+    <img class="profilepic" src="../static/images/ross-spoons.webp" alt="Greg Profile pic">
+    <h4 class="therapists"> <strong>Greg Goodrem</strong><br> Trainee Massage Therapist & PT</h4>
+    <p class="center">Having delivered THOUSANDS of hours of personal training since starting in 2005, Greg can
+      help you slowly return to sport and exercise after your treatment.</p>
+  </div>
+  <div class="col s12 m6 l4 center">
+    <!--The image used has been supplied by Balanced Training-->
+    <img class="profilepic" src="../static/images/max-outside.webp" alt="Max profile pic">
+    <h4 class="therapists"> <strong> Maximus Goodrem</strong> <br>Emotional Support</h4>
+    <p>This little guy is an integral part of our team always brings a smile to
+      your face whenever he comes through the gym door carrying a ball. He usually likes to chill
       out in the office upstairs but is on hand for a stroke or to eat a treat.</p>
+  </div>
+</div>
+<!--Opening Times-->
+<div class="container-fluid map-opening">
+  <div class="row">
+    <div class="col-12 col-md-4 text-center opening">
+      <p class="opening-time stepTitle">
+        Treatment Availability
+      </p>
+      <table class="opening">
+        <tr>
+          <td class="day">Monday</td>
+          <td class="times">09:00 - 19:00</td>
+        </tr>
+        <tr>
+          <td class="day">Tuesday</td>
+          <td class="times">09:00 - 19:00</td>
+        </tr>
+        <tr>
+          <td class="day">Wednesday</td>
+          <td class="times">09:00 - 19:00</td>
+        </tr>
+        <tr>
+          <td class="day">Thursday</td>
+          <td class="times">09:00 - 19:00</td>
+        </tr>
+        <tr>
+          <td class="day">Friday</td>
+          <td class="times">09:00 - 12:00</td>
+        </tr>
+        <tr>
+          <td class="day">Saturday</td>
+          <td class="times">Unavailable</td>
+        </tr>
+        <tr>
+          <td class="day">Sunday</td>
+          <td class="times">Unavailable</td>
+        </tr>
+      </table>
     </div>
   </div>
-      <!--Opening Times-->
-      <div class="container-fluid map-opening">
-        <div class="row">
-          <div class="col-12 col-md-4 text-center opening">
-              <p class="opening-time stepTitle">
-                    Treatment Availability
-              </p>
-            <table class="opening">
-              <tr>
-                <td class="day">Monday</td>
-                <td class="times">09:00 - 19:00</td>
-              </tr>
-              <tr>
-                <td class="day">Tuesday</td>
-                <td class="times">09:00 - 19:00</td>
-              </tr>
-              <tr>
-                <td class="day">Wednesday</td>
-                <td class="times">09:00 - 19:00</td>
-              </tr>
-              <tr>
-                <td class="day">Thursday</td>
-                <td class="times">09:00 - 19:00</td>
-              </tr>
-              <tr>
-                <td class="day">Friday</td>
-                <td class="times">09:00 - 12:00</td>
-              </tr>
-              <tr>
-                <td class="day">Saturday</td>
-                <td class="times">Unavailable</td>
-              </tr>
-              <tr>
-                <td class="day">Sunday</td>
-                <td class="times">Unavailable</td>
-              </tr>
-            </table>
-            </div>
-        </div>
-      </div>
-      
-  <div class="stepTitle center-align">Where are we?</div>
+</div>
 
-  <div class="mapouter">
-    <div class="gmap_canvas">
-      <iframe width="100%" height="280" id="gmap_canvas" src="https://maps.google.com/maps?q=balanced%20training%20ss39qy&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" marginheight="0" marginwidth="0">
-      </iframe></div></div>
+<div class="stepTitle center-align">Where are we?</div>
+
+<div class="mapouter">
+  <div class="gmap_canvas">
+    <iframe id="gmap_canvas"
+      src="https://maps.google.com/maps?q=balanced%20training%20ss39qy&t=&z=15&ie=UTF8&iwloc=&output=embed">
+    </iframe></div>
+</div>
 <br>
 
 <div class="stepTitle center-align">Contact Us</div>
 <div class="row">
   <div class="col s12">
     <div class="card-panel light-grey">
-<form id="form">
-  <div class="field">
-    <label for="from_name">Name</label>
-    <input type="text" name="from_name" id="from_name" required>
+      <form id="form">
+        <div class="field">
+          <label for="from_name">Name</label>
+          <input type="text" name="from_name" id="from_name" required>
+        </div>
+        <div class="field">
+          <label for="contact_number">Phone Number</label>
+          <input type="text" name="contact_number" id="contact_number">
+        </div>
+        <div class="field">
+          <label for="reply_to">Email Address</label>
+          <input type="email" name="reply_to" id="reply_to" required>
+        </div>
+        <div class="field">
+          <label for="message">Message:</label>
+          <textarea name="message" id="message" required></textarea>
+        </div>
+        <input class="btn-large blue darken-4 center" type="submit" id="buttonsm" value="Send Email"
+          onclick="SendMail()">
+      </form>
+    </div>
   </div>
-  <div class="field">
-    <label for="contact_number">Phone Number</label>
-    <input type="text" name="contact_number" id="contact_number">
-  </div>
-  <div class="field">
-    <label for="reply_to">Email Address</label>
-    <input type="email" name="reply_to" id="reply_to" required>
-  </div>
-  <div class="field">
-    <label for="message">Message:</label>
-    <textarea type="text" name="message" id="message" required></textarea>
-  </div>
-  <input class="btn-large blue darken-4 center" type="submit" id="buttonsm" value="Send Email" onclick="SendMail()">
-</form>
 </div>
-</div>
-</div>
-    </section>
-
-    <script type="text/javascript" src="{{ url_for('static', filename='js/email.js') }}"></script>
-  {% endblock %}
+<script src="{{ url_for('static', filename='js/email.js') }}"></script>
+{% endblock %}
