--- a/milestone3/templates/register.html
+++ b/milestone3/templates/register.html
@@ -29,8 +29,7 @@
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="fas fa-folder-open prefix blue-grey-text text-darken-4"></i>
-                        <input id="dob" name="dob" minlength="3" maxlength="25"
-                            type="date" class="validate" required>
+                        <input id="dob" name="dob" type="date" class="validate" required>
                         <label for="dob">Date of Birth</label>
                     </div>
                 </div>
