--- a/milestone3/static/css/style.css
+++ b/milestone3/static/css/style.css
@@ -50,7 +50,7 @@ nav .brand-logo {
 }
 
 .card_panel {
-    padding: 5px, 5px;
+    padding: 5px 5px;
 }
 
 .reseter{
@@ -318,7 +318,6 @@ td.day, td.times {
     text-align: center;
     border-bottom: 1px solid white;
     padding: 5px 15px;
-    height: ;
 }
 
 td.day {
