--- a/milestone3/templates/home.html
+++ b/milestone3/templates/home.html
@@ -56,9 +56,9 @@
 <div class="container-fluid map-opening">
   <div class="row">
     <div class="col-12 col-md-4 text-center opening">
-      <p class="opening-time stepTitle">
+      <div class="opening-time stepTitle">
         Treatment Availability
-      </p>
+      </div>
       <table class="opening">
         <tr>
           <td class="day">Monday</td>
