--- a/milestone3/templates/home.html
+++ b/milestone3/templates/home.html
@@ -96,7 +96,7 @@
 <div class="stepTitle center-align">Where are we?</div>
 
 <div class="mapouter">
-  <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1087.7685759654782!2d0.7947577885186309!3d51.5357096853834!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d927b7c1b1e26d%3A0x8d658dbbe5f7866!2sBalanced%20Training!5e0!3m2!1sen!2suk!4v1670581827075!5m2!1sen!2suk" width="100%" height="275px" style="border:0;" loading="lazy"></iframe>
+  <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1087.7685759654782!2d0.7947577885186309!3d51.5357096853834!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d927b7c1b1e26d%3A0x8d658dbbe5f7866!2sBalanced%20Training!5e0!3m2!1sen!2suk!4v1670581827075!5m2!1sen!2suk" style="border:0; width:100%; height:275px;" loading="lazy"></iframe>
   </div>
 <br>
 
