--- a/milestone3/templates/report.html
+++ b/milestone3/templates/report.html
@@ -5,7 +5,7 @@
 {% for treatment in treatments %}
 <p class="hide"> {{ list.append(treatment.treatment_name)}} </p>
 {% endfor %}
-
+<!-- Data created for Report Summary -->
 {% set counter = {
   'shoulder': 0,
   'back': 0,
