--- a/milestone3/static/css/style.css
+++ b/milestone3/static/css/style.css
@@ -1,411 +1,275 @@
 @import url('https://fonts.googleapis.com/css2?family=Muli&display=swap');
 
-
-body {
-    display: flex;
+/* Global settings */
+body {display: flex;
     font-family: 'Muli', sans-serif;
     min-height: 100vh;
-    flex-direction: column;
-}
+    flex-direction: column;}
 
-nav {
-    background-color: darkblue;
-}
+nav {background-color: darkblue;}
 
-main {
-    flex: 1 0 auto;
-}
+nav .brand-logo {font-size: 3.7vw;
+    margin: 0;}
 
-.card-action.cog.vis{
-    padding: 0px;
-    visibility: hidden ;
-    height: 0px;
-}
+main {flex: 1 0 auto;}
 
-.topnav, .footernav{
-    background-image: url(../images/sportsmassagebanner.webp) ;
-    background-position: center; 
-    background-repeat: no-repeat; 
-    background-size: cover;
-}
+a.brand-logo {margin:  0 0 10px 10px ;}
 
-.hide {
-    visibility: hidden;
-}
-.edit {
-    margin-right: 10px;
-}
+.nav-wrapper {height: 75px;}
 
-.larger {
-    font-size: larger;
-}
+.sidenav-overlay{opacity: 0;
+    height: 100vh;}
 
-nav .brand-logo {
-    font-size: 3.7vw;
-    margin: 0px;
-}
+.hide {visibility: hidden;}
 
-.card_panel {
-    padding: 5px 5px;
-}
+/* Flash message font */
+h1 {font-size: 40px;
+    color: crimson;}
 
-.reseter{
-    width: 90px;}
+/* Label stying */
 
-a.brand-logo {
-    margin:  0 0 10px 10px ;
-}
+label.searchlabel {top: 30px;}
 
-.nav-wrapper {
-    height: 75px;
-}
+label.searchlabel.active {top: -5px;}
 
-label.searchlabel {
-    top: 30px;
-}
-
-label.searchlabel.active {
-    top: -5px;
-}
-
-.tabletext {
-    font-size: 16px;
-    font-weight: 500;
-}
-
-.headcent {
-    text-align: center;
-}
-
-.bold {
-    font-weight: 800;
-    font-size: 20px;
-}
-
-.smallbold {
-    font-size: 16px;
-    font-weight: 500;
-    padding: 0;
-}
-
-.tnumrep {
-    font-size: 22px;
-}
-
-label.editname {
-    color: black;
+label.editname {color: black;
     font-weight: 700;
     font-size: larger;
-    margin-bottom: 10px;
-}
+    margin-bottom: 10px;}
 
-.antpos {
-    background-image: url(../images/antpos.webp) ;
+
+.input-field label, label {color: #707070;}
+
+/* Footer stylings */
+.footer-text-right {display: flex;
+    color: #fff;
+    text-align: center;
+    font-weight: 500;
+    padding-bottom: 15px;
+    left: 50%;
+    transform: translateX(-50%);}
+
+.footer-left {color: #fff;
+    padding-top: 15px;
+    font-size: 0.8rem;
+    width: 50%;}
+
+.social-bottom {height: 40px;
+    text-align: center;
+    padding-top: 20px;}
+
+footer {width: 100%;
+    background-color: rgb(0, 0, 95);
+    height: 110px;
+    bottom: 0;
+    line-height: 1px;}
+
+.format {display: inline-flex;
+    left: 50%;
+    transform: translateX(35%);}
+
+.follow {color: aliceblue;
+    align-items: center;
+    position: relative;
+    top: 10px;
+    right: 0;}
+
+a.left {color: #fff;
+    padding-top: 5px;
+    height: 80px;
+    width: 100%;
+    left: 50%;
+    transform: translateX(15%);}
+
+a.right.padleft {color: black;}
+
+p.telephone {width: 100%;
+    height: 20px;
+    left: 50%;
+    font-size: 16px;
+    transform: translateX(15%);}
+
+.phone-text {color: #fff;
+    font-size: 14px;}
+
+.icon-size {color: rgb(255, 255, 255);
+    padding-top: 20px;
+    margin: 0 4vw;
+    font-size: 40px;}
+
+/* Home Page Specific styling */
+img.bannersm.center-align {width: 116%;
+    height: auto;
+    position: relative;
+    left: -8%;
+    right: 0;}
+
+img.steps {margin: 0 0;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    box-shadow: 3px 3px 3px grey;}
+
+.stepTitle {font-size: 40px;
+    text-shadow: 2px 2px 2px grey;
+    margin-bottom: 15px;}
+
+td.day, td.times {font-weight: 500;
+    width: 150px;
+    font-size: 18px;
+    text-align: center;
+    border-bottom: 1px solid white;
+    padding: 5px 15px;}
+
+td.day {color: darkblue;}
+
+table.opening {width: 300px;
+    margin-left: 48%;
+    transform: translateX(-50%);}
+
+.opening-time {width: 100%;
+    text-align: center;}
+
+.tabletext {font-size: 16px;
+    font-weight: 500;}
+
+.cta {border-radius: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-bottom: 30px;}
+
+.therapists {font-size: 26px;}
+
+/* Report Styling */
+.bold {font-weight: 800;
+    font-size: 20px;}
+
+/* Edit Client this */
+.pad10 {padding: 12px 5px;
+    min-width: 150px;}
+
+/*  */
+.card-action.cog.vis{padding: 0;
+    visibility: hidden ;
+    height: 0;}
+
+
+.larger {font-size: larger;}
+
+.card_panel {padding: 5px 5px;}
+
+.reseter{width: 90px;}
+
+.headcent {text-align: center;}
+
+.smallbold {font-size: 16px;
+    font-weight: 500;
+    padding: 0;}
+
+.tnumrep {font-size: 22px;}
+
+body > main > div > div:nth-child(2) > div.col > table {line-height: 0;
+    font-size: 12px;}
+
+body > main > div > div:nth-child(2) > div.col {left: 50px;}
+
+.gap {margin: 10px 0;}
+
+div.card-content.white-text {padding: 10px 10px 0 10px;
+    height: 80px;
+    justify-content: center;
+    text-align: center;}
+
+div.col.s2 {margin-left: auto;
+    display: flex;}
+
+.card {border-radius: 15px;}
+
+textarea#message {height: 80px;
+    border-top: 1px solid white;
+    border-right: 1px solid white;
+    border-left: 1px solid white;
+    border-bottom-color: grey;
+    margin-bottom: 10px;}
+
+.card-panel.light-grey {width: 100%;
+    margin-left: 0;
+    margin-right: 0;}
+
+#query::placeholder {color: cadetblue;}
+
+/* Modal Styling */
+
+.modal .modal-footer {text-align: center;}
+
+div#modal1.modal.open {left: -15%;}
+
+/* Button Styling */
+
+a.btn.red.lighten-1 {width: 101px;
+    margin: 5px 0;}
+
+a.btn.records {width: 103px;
+    margin: 5px;}
+
+a.btn-large.red.text-shadow{width: 190px;
+    margin: 5px 0;}
+
+a.btn.right {color: white;
+    padding: 5px;
+    line-height: 16px;
+    height: auto;
+    max-width: 200px;}
+
+.btn-large {border-radius: 10px;}
+
+.btn {border-radius: 5px;}
+
+#buttonsm {margin-left: 50%;
+    transform: translateX(-50%);}
+
+.eddel {width: 70px;
+    padding: 0;
+    margin: 5px;}
+
+.edit {margin-right: 10px;}
+
+/* Media size changes */
+@media screen and (max-width: 500px) {
+    a.brand-logo {font-size: 16px;}
+    div.col.s2 {
+    margin-left: auto;
+    display:grid;}}
+
+@media screen and (min-width: 900px){
+    .card-panel.light-grey {
+        width: 80%;
+        margin-left: 10%;
+        margin-right: 10%;}}
+
+@media screen and (min-width: 600px) and (max-width: 993px) {
+    #stepTitle > div:nth-child(4) {
+        padding-left: 35%;
+        display: inline-flex;}}
+
+/* Images */
+.topnav, .footernav{background-image: url(../images/sportsmassagebanner.webp) ;
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: cover;}
+
+.antpos {background-image: url(../images/antpos.webp) ;
     background-position: center; 
     background-repeat: no-repeat; 
     background-size: cover;
     width: 100%;
-    height: 275px;
-}
-body > main > div > div:nth-child(2) > div.col > table {
-    line-height: 0;
-    font-size: 12px;
-}
-.pad10 {
-    padding: 12px 5px;
-    min-width: 150px;
-}
+    height: 275px;}
 
-body > main > div > div:nth-child(2) > div.col {
-    left: 50px;
-}
-
-img.bannersm.center-align {
-    width: 116%;
-    height: auto;
-    position: relative;
-    left: -8%;
-    right: 0;
-}
-
-img.steps {
-    margin: 0 0px;
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    box-shadow: 3px 3px 3px grey;
-}
-.stepTitle {
-    font-size: 40px;
-    text-shadow: 2px 2px 2px grey;
-    margin-bottom: 15px;
-}
-
-.gap {
-    margin: 10px 0;
-}
-
-a.btn.red.lighten-1 {
-    width: 101px;
-    margin: 5px 0;
-}
-
-div.card-content.white-text {
-    padding: 10px 10px 0 10px;
-    height: 80px;
-    justify-content: center;
-    text-align: center;
-}
-
-a.btn-large.red.text-shadow{
-    width: 190px;
-    margin: 5px 0;
-}
-
-.eddel {
-    width: 70px;
-    padding: 0;
-    margin: 5px;
-}
-
-div.col.s2 {
-    margin-left: auto;
-    display: flex;
-}
-
-
-@media screen and (max-width: 500px) {
-    a.brand-logo {
-        font-size: 16px;
-    }
-    div.col.s2 {
-    margin-left: auto;
-    display:grid;
-    }
-}
-
-.therapists {
-    font-size: 26px;
-}
-
-img.profilepic {
-    border-radius: 50%;
+img.profilepic {border-radius: 50%;
     margin: auto 0;
     top: 0;
     width: 200px;
     height: 200px;
     height: auto;
     border: 1px solid rgb(0, 0, 139, 0.8);
-    box-shadow: 3px 3px 3px darkblue;
-}
-
-.cta {
-    border-radius: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    margin-bottom: 30px;
-}
-
-.imap {
-    width: 100%;
-}
-
-.icon-size {
-    color: rgb(255, 255, 255);
-    padding-top: 20px;
-    margin: 0 4vw;
-    font-size: 40px;
-}
-
-.footer-text-right {
-    display: flex;
-    color: #fff;
-    text-align: center;
-    font-weight: 500;
-    padding-bottom: 15px;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-.footer-left {
-    color: #fff;
-    padding-top: 15px;
-    font-size: 0.8rem;
-    width: 50%;
-}
-.social-bottom {
-    height: 40px;
-    text-align: center;
-    padding-top: 20px;
-}
-
-footer {
-    width: 100%;
-    background-color: rgb(0, 0, 95);
-    height: 110px;
-    bottom: 0;
-    line-height: 1px;
-}
-
-.format {
-    display: inline-flex;
-    left: 50%;
-    transform: translateX(35%);
-}
-
-.follow {
-    color: aliceblue;
-    align-items: center;
-    position: relative;
-    top: 10px;
-    right: 0px;
-}
-a.left {
-    color: #fff;
-    padding-top: 5px;
-    height: 80px;
-    width: 100%;
-    left: 50%;
-    transform: translateX(15%);
-}
-
-a.right.padleft {
-    color: black;
-}
-
-p.telephone {
-    width: 100%;
-    height: 20px;
-    left: 50%;
-    font-size: 16px;
-    transform: translateX(15%);
-}
-
-.sidenav-overlay{opacity: 0;
-height: 100vh;}
-
-body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-}
-
-.card {
-    border-radius: 15px;
-}
-
-.phone-text {
-    color: #fff;
-    font-size: 14px;
-}
-
-@media screen and (min-width: 600px) and (max-width: 993px) {
-    #stepTitle > div:nth-child(4) {
-        padding-left: 35%;
-        display: inline-flex;
-    }
-}
-
-
-td.day, td.times {
-    font-weight: 500;
-    width: 150px;
-    font-size: 18px;
-    text-align: center;
-    border-bottom: 1px solid white;
-    padding: 5px 15px;
-}
-
-td.day {
-    color: darkblue;
-}
-
-table.opening {
-    width: 300px;
-    margin-left: 48%;
-    transform: translateX(-50%);
-}
-
-.opening-time {
-    width: 100%;
-    text-align: center;
-}
-
-.btn-large {
-    border-radius: 10px;
-}
-.btn {
-    border-radius: 5px;
-}
-
-textarea#message {
-    height: 80px;
-    border-top: 1px solid white;
-    border-right: 1px solid white;
-    border-left: 1px solid white;
-    border-bottom-color: grey;
-    margin-bottom: 10px;
-}
-
-.card-panel.light-grey {
-    width: 100%;
-    margin-left: 0%;
-    margin-right: 0%;
-}
-
-
-@media screen and (min-width: 900px){
-    .card-panel.light-grey {
-        width: 80%;
-        margin-left: 10%;
-        margin-right: 10%;
-    }
-} 
-
-#buttonsm {
-    margin-left: 50%;
-    transform: translateX(-50%);
-}
-
-a.btn.right {
-    color: white;
-    padding: 5px;
-    line-height: 16px;
-    height: auto;
-    max-width: 200px;
-}
-
-#query::placeholder {
-    color: cadetblue;
-    
-}
-
-a.btn.records {
-    width: 103px;
-    margin: 5px;
-}
-
-.modal .modal-footer {
-    text-align: center;
-}
-div#modal1.modal.open {
-    left: -15%;
-}
-
-h1 {
-    font-size: 40px;
-    color: crimson;
-}
-
-.input-field label, label {
-    color: #707070;
-}
-
-/* 
-
-.mapouter{
-    position:absolute;
-    text-align:left;
-    height:275px;
-    width:100vw;
-} */
+    box-shadow: 3px 3px 3px darkblue;}
