--- a/milestone3/templates/add_client.html
+++ b/milestone3/templates/add_client.html
@@ -51,7 +51,7 @@
                        <label for="phone">Phone Number</label>
                   </div>
                </div>
-                <!-- passowrd -->
+                <!-- password -->
                 <div class="row">
                     <div class="input-field col s12">
 						<i class="fas fa-user-lock prefix blue-grey-text text-darken-4"></i>
