--- a/milestone3/templates/clients.html
+++ b/milestone3/templates/clients.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
-
+<!-- Javascript links for the modals to be active -->
 <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-3.6.1.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
 
     <h3 class="blue-grey-text text-darken-4 center-align">Manage Clients</h3>
-
+<!-- Add client link -->
     <div class="row">
         <div class="col s12 center-align">
             <a href="{{ url_for('add_client') }}" class="btn-large deep-orange darken-4 text-shadow">
@@ -13,6 +13,7 @@
             </a>
         </div>
     </div>
+    <!-- Rows for the different clients -->
     <div class="row">
             {% for user in users %}
             {% if user.username != "gadmin" %}
@@ -21,6 +22,7 @@
                     <div class="card-content white-text">
                         <span class="card-title">{{ user.fullname }}</span>
                     </div>
+                    <!-- Edit link -->
                     <div class="card-action">
                         <a href="{{ url_for('edit_client', user_id=user._id ) }}" class="btn green darken-3 records">Records</a>
 
@@ -35,6 +37,7 @@
                       </div>
                       <div class="modal-footer">
                         <a href="" class="modal-close btn green darken-3 records">Cancel</a>
+                        <!-- Delete Link -->
                         <a href="{{ url_for('delete_client', user_id=user.username ) }}" class="modal-close btn red darken-2 records">Delete</a>
                       </div>
                     </div>
