--- a/milestone3/templates/edit_client.html
+++ b/milestone3/templates/edit_client.html
@@ -1,14 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
-
+<!-- Javascript links for the modals to be active -->
 <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-3.6.1.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
-
+<!-- Client Records to be displayed -->
 <h3 class="blue-grey-text text-darken-4 center-align">{{ user.fullname }} Records</h3>
 <div class="row card-panel grey lighten-5">
     <div class="col s12 m6">
 
         <form class="col s12" method="POST" action="{{ url_for('edit_client', user_id=user._id) }}">
+          <!-- Hidden username field so it is kept when all other data is saved -->
           <div class="row hide">
             <div class="input-field col s12">
                     <i class="fas fa-user prefix blue-grey-text text-darken-4"></i>
@@ -17,6 +18,7 @@
                     <label for="username"></label>
             </div>
           </div>
+          <!-- Hidden password field so it is kept when all other data is saved -->
           <div class="row hide">
             <div class="input-field col s12">
                     <i class="fas fa-user prefix blue-grey-text text-darken-4"></i>
@@ -81,7 +83,7 @@
             </div>
         </form>
     </div>
-
+<!-- Individual Report data -->
     <div class="col s12 m6">
         <div class="antpos">
         </div>
@@ -108,7 +110,7 @@
   'arm': 0,
   'other': 0
   } %}
-
+<!-- Calculations for each data field -->
 {% macro increment(dct, key, inc=1)%}
     {% if dct.update({key: dct[key] + inc}) %} {% endif %}
 {% endmacro %}
@@ -226,14 +228,11 @@
     </div>
     </div>
 </div>
-<!-- <h5>{{ user._id }} - user._id works {{ user.fullname }} - user.fullname works </h5> -->
-
-    {% if treatments|length > 0 %}
-    <ul class="collapsible">
+{% if treatments|length > 0 %}
+<ul class="collapsible">
+      <!-- Each treatment client has had is displayed -->
         {% for treatment in treatments %}
         {% if user.username|string == treatment.user_id|string %}
-        <!-- {{ treatment.user_id }}  -->
-        <!-- <h5>{{ user._id }} - user._id works {{ user.fullname }} - user.fullname works </h5> -->
         <li>
             <div class="collapsible-header white-text blue-grey darken-4 text-shadow">
                 <div class="col s3">
@@ -261,16 +260,16 @@
                       <p>The treatment information can not be restored if you choose to delete.</p>
                     </div>
                     <div class="modal-footer">
+                      <!-- Cancel button - has nothing in href which returns to screen -->
                       <a href="" class="modal-close waves-effect btn-flat btn-small green lighten-1 edit eddel">Cancel</a>
+                      <!-- Delete Button -->
                       <a href="{{ url_for('delete_treatment', treatment_id=treatment._id) }}" class="modal-close waves-effect btn-flat btn-small red lighten-1 edit eddel">Delete</a>
                     </div>
                   </div>
-
-
-                  <!-- <a href="{{ url_for('delete_treatment', treatment_id=treatment._id) }}" class="btn-small red lighten-1 edit eddel">Delete</a> -->
                   {% endif %}
               </div>
             </div>
+            <!-- Drop down information for each treatment -->
             <div class="collapsible-body">
                 <div class="row">
                     <div class="col s6 m6">
