--- a/milestone3/templates/profile.html
+++ b/milestone3/templates/profile.html
@@ -9,6 +9,7 @@
                 <h3 class="center-align light-blue-text text-darken-4">
                     Book your session below
                 </h3>
+                <!-- Session booking using the Calendly App -->
                 <iframe src="https://calendly.com/balancedtraining/sports-massage?&amp;embed_type=Inline&amp;hide_gdpr_banner=1&amp;name={{ username.fullname }}&amp;email={{ username.email }}" 
                 width="100%" height="100%" frameborder="0"></iframe>
              </div>
