--- a/milestone3/templates/register.html
+++ b/milestone3/templates/register.html
@@ -69,7 +69,7 @@
             </div>
         </form>
     </div>
-
+<!-- Link for login if not neccessary to register -->
     <div class="row">
         <div class="col s12">
             <p class="center-align">
