--- a/milestone3/templates/treatments.html
+++ b/milestone3/templates/treatments.html
@@ -3,6 +3,7 @@
     <h3 class="blue-grey-text text-darken-4 center-align">Treatments</h3>
     {% if session["user"] == "gadmin" %}
     <div class="row card-panel grey lighten-4">
+        <!-- Search bar for the Therapists -->
         <form action="{{ url_for('search') }}" method="post" class="col s12">
             <div class="row valign-wrapper center-align">
                 <div class="input-field col s12 m8">
@@ -20,9 +21,10 @@
         </form>
     </div>
     {% endif %}
-    
+    <!-- Treatments of all clients for the therapist login or individual information client login -->
     {% if treatments|length > 0 %}
     <ul class="collapsible">
+        <!-- Treatments -->
     {% for treatment in treatments %}
         {% if treatment.user_id|lower == session["user"] or session["user"] == "gadmin" %}         
             <li>
@@ -31,11 +33,10 @@
                     <i class="fas fa-caret-down"></i>
                     {% if session.user|lower == treatment.created_by|lower %}
                     <a href="{{ url_for('edit_treatment', treatment_id=treatment._id) }}" class="btn-small green lighten-1 edit">Edit</a>
-                    <!-- <a href="{{ url_for('delete_treatment', treatment_id=treatment._id) }}" class="btn-small red lighten-1 delete">Delete</a> -->
                     {% endif %}
                 </div>
-                <div class="col s9"> 
-                   
+
+                <div class="col s9">    
                     <strong class="larger"> 
                         {% for user in users %}
                             {% if treatment.user_id|lower == user.username|lower %}        
