--- a/milestone3/templates/profile.html
+++ b/milestone3/templates/profile.html
@@ -3,7 +3,7 @@
 
     <div class="row">
         <div class="col s12 m12">
-            <div class="card-panel">
+            <div id="booking" class="card-panel">
                 <p><strong>{{ username.fullname }}</strong> logged in. </p>
                 <h2 class="upcoming-booking"></h2>
                 <h3 class="center-align light-blue-text text-darken-4">
