--- a/milestone3/static/css/style.css
+++ b/milestone3/static/css/style.css
@@ -156,9 +156,10 @@ textarea#message {height: 80px;
 
 /* Book page styling */
 #booking {
-    height: 100%;
+    height: 450px;
     box-shadow: 0 0 0 0 white;
 }
+
 /* Report Styling */
 .bold {font-weight: 800;
     font-size: 20px;}
